--- a/101. 对称二叉树.md
+++ b/101. 对称二叉树.md
@@ -16,12 +16,12 @@ class Solution:
         def compare_node(n1, n2):
             if not n1 and not n2:
                 return True
-            elif n1 and n2:
-                return n1.val == n2.val and compare_node(n1.left, n2.right) and compare_node(n1.right, n2.left)
+            elif n1 and n2 and n1.val == n2.val:
+                return compare_node(n1.left, n2.right) and compare_node(n1.right, n2.left)
             else:
                 return False
         
-        return True if not root else compare_node(root.left, root.right)
+        return compare_node(root.left, root.right) if root else True
 ```
 
 时间复杂度：O(n)
