--- a/101. 对称二叉树.md
+++ b/101. 对称二叉树.md
@@ -13,15 +13,15 @@
 class Solution:
     def isSymmetric(self, root: TreeNode) -> bool:
         
-        def compare_node(n1, n2):
-            if not n1 and not n2:
+        def compare(a, b):
+            if not a and not b:
                 return True
-            elif n1 and n2 and n1.val == n2.val:
-                return compare_node(n1.left, n2.right) and compare_node(n1.right, n2.left)
+            elif a and b and a.val == b.val:
+                return compare(a.left, b.right) and compare(a.right, b.left)
             else:
                 return False
         
-        return compare_node(root.left, root.right) if root else True
+        return compare(root.left, root.right) if root else True
 ```
 
 时间复杂度：O(n)
