--- a/101. 对称二叉树.md
+++ b/101. 对称二叉树.md
@@ -1,5 +1,7 @@
 题目：[101. 对称二叉树](https://leetcode-cn.com/problems/symmetric-tree/)
 
+与 [面试题28. 对称的二叉树](https://leetcode-cn.com/problems/dui-cheng-de-er-cha-shu-lcof/) 相同。
+
 ### 递归
 
 ```py
