--- a/138. 复制带随机指针的链表.md
+++ b/138. 复制带随机指针的链表.md
@@ -15,9 +15,9 @@
 著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
 ```
 
-random 指针一定指向链表中某个节点。
+### 解法一
 
-解法：
+random 指针一定指向链表中某个节点。
 
 1. 保留一个哈希表，key 是原链表中每个节点地址，value 是新链表中每个节点地址
 2. 复制原链表，random 也复制原来的值。那么 random 就是哈希表中的 key
@@ -52,5 +52,71 @@ class Solution:
             if x.random in d:
                 x.random = d[x.random]
             x = x.next
+        return dummy.next
+```
+
+写完以后也感觉有点怪，参考完答案之后才发现遍历一次即可。有递归和迭代两种写法。
+
+### 解法二，哈希表+递归
+
+```py
+"""
+# Definition for a Node.
+class Node:
+    def __init__(self, x: int, next: 'Node' = None, random: 'Node' = None):
+        self.val = int(x)
+        self.next = next
+        self.random = random
+"""
+class Solution:
+    def __init__(self):
+        self.visited = {}
+
+    def copyRandomList(self, head: 'Node') -> 'Node':
+        if not head:
+            return None
+        if head in self.visited:
+            return self.visited[head]
+        node = Node(head.val)
+        self.visited[head] = node
+        node.next = self.copyRandomList(head.next)
+        node.random = self.copyRandomList(head.random)
+        return node
+```
+
+### 解法三：迭代
+
+原理是一样的。创建过了就到哈希表里取，没创建过就重新重建并存到哈希表里。
+
+加了一个哨兵节点 dummy 的好处是不用单独处理 head 了，流程处理起来更顺畅一点。
+
+```py
+"""
+# Definition for a Node.
+class Node:
+    def __init__(self, x: int, next: 'Node' = None, random: 'Node' = None):
+        self.val = int(x)
+        self.next = next
+        self.random = random
+"""
+class Solution:
+    def __init__(self):
+        self.visited = {}
+
+    def getClonedNode(self, node):
+        if node:
+            if node in self.visited:
+                return self.visited[node]
+            else:
+                self.visited[node] = Node(node.val)
+                return self.visited[node]
+
+    def copyRandomList(self, head: 'Node') -> 'Node':
+        dummy = Node(0)
+        x = dummy
+        while head:
+            x.next = self.getClonedNode(head)
+            x.next.random = self.getClonedNode(head.random)
+            head, x = head.next, x.next
         return dummy.next
 ```
