--- a/138. 复制带随机指针的链表.md
+++ b/138. 复制带随机指针的链表.md
@@ -120,3 +120,42 @@ class Solution:
             head, x = head.next, x.next
         return dummy.next
 ```
+
+### 解法四：
+
+为原链表的每个节点复制一个节点，并紧跟在原节点的后边。
+那么就有： `next.random = cur.random.next`
+
+```py
+"""
+# Definition for a Node.
+class Node:
+    def __init__(self, x: int, next: 'Node' = None, random: 'Node' = None):
+        self.val = int(x)
+        self.next = next
+        self.random = random
+"""
+class Solution:
+    def copyRandomList(self, head: 'Node') -> 'Node':
+        if not head:
+            return None
+
+        cur = head
+        while cur:
+            node = Node(cur.val)
+            node.next, cur.next = cur.next, node
+            cur = node.next
+        
+        cur = head
+        while cur:
+            if cur.random:
+                cur.next.random = cur.random.next
+            cur = cur.next.next
+        
+        cur, copy = head, head.next
+        while cur:
+            next = cur.next.next
+            cur.next.next = next.next if next else None
+            cur = next
+        return copy
+```
