--- a/34. 在排序数组中查找元素的第一个和最后一个位置.md
+++ b/34. 在排序数组中查找元素的第一个和最后一个位置.md
@@ -37,3 +37,16 @@ class Solution:
         else:
             return [-1, -1]
 ```
+
+用一下标准库 bisect，bisect_left 跟上边写的 find_left 是同样的功能。
+
+```py
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        from bisect import bisect_left
+        lo = bisect_left(nums, target)
+        if lo == len(nums) or nums[lo] != target:
+            return [-1, -1]
+        hi = bisect_left(nums, target+1)
+        return [lo, hi-1]
+```
