--- a/4. 寻找两个正序数组的中位数.md
+++ b/4. 寻找两个正序数组的中位数.md
@@ -13,8 +13,8 @@ B = [ B1...Bn ]
 
 但是总长度 m+n 有可能为奇数，此时左边要比右边少一个数（比如 m=3,n=4，那左边就 `(m+n)/2` 就是 3个，右边是 4个）。
 
-A 组变成 [ A1, ... Ai] [Ai+1, ... Am]
-B 组变成 [ B1, ... Bj] [Bj+1, ... Bn]
+* A 组变成 [ A1, ... Ai] [Ai+1, ... Am]
+* B 组变成 [ B1, ... Bj] [Bj+1, ... Bn]
 
 因为是有序数组，关注中间四个数，此时有 3 种情况：
 
@@ -24,7 +24,9 @@ B 组变成 [ B1, ... Bj] [Bj+1, ... Bn]
 
 找到中间位置之后，还要根据总长度是奇数还是偶数来决定中位数的值：
 
-如果是偶数，那中位数就是 `( max(Ai,Bj) + min(Ai+1,Bj+1) )/2`
+* 如果`(m+n)`是偶数，那中位数就是 `( max(Ai,Bj) + min(Ai+1,Bj+1) )/2`
+* 如果`(m+n)`是奇数，右边多一个数，所以中位数是右边的最小值，即 `min(Ai+1,Bj+1)`。
 
-如果是奇数，右边多一个数，所以中位数是右边的最小值，即 `min(Ai+1,Bj+1)`。
+另外一个问题是 i 的左移和右移应该怎么移动，使用二分法，每次在取 A 剩下部分的中间值。最极端的情况是数组A的长度比较短，切割点为0或m。
 
+以 A 和 B 中
