--- a/4. 寻找两个正序数组的中位数.md
+++ b/4. 寻找两个正序数组的中位数.md
@@ -3,8 +3,8 @@
 假设有 A、B 两个有序数组，长度分别为 m, n。
 
 ```
-A = [ A1...Am ]
-B = [ B1...Bn ]
+A = [ A0...Am-1 ]
+B = [ B0...Bn-1 ]
 ```
 
 把它们各分成左右两边，要求两边长度的和相等，即 A_left+B_left 的长度等于 A_right+B_right 的长度。
@@ -13,20 +13,61 @@ B = [ B1...Bn ]
 
 但是总长度 m+n 有可能为奇数，此时左边要比右边少一个数（比如 m=3,n=4，那左边就 `(m+n)/2` 就是 3个，右边是 4个）。
 
-* A 组变成 [ A1, ... Ai] [Ai+1, ... Am]
-* B 组变成 [ B1, ... Bj] [Bj+1, ... Bn]
+* A 组变成 `[ A0, ... Ai-1]` `[Ai, ... Am-1]`
+* B 组变成 `[ B0, ... Bj-1]` `[Bj, ... Bn-1]`
 
 因为是有序数组，关注中间四个数，此时有 3 种情况：
 
-1. `Ai>Bj+1`，此时这四个值的大小顺序就是 `Bj<Bj+1<Ai<Ai+1`，i 的切割点要往左移
-2. `Bj>Ai+1`，此时这四个值的大小顺序就是 `Ai<Ai+1<Bj<Bj+1`，i 的切割点要往右移
-3. 除了上边两种情况之下，就剩下 `Ai<=Bj+1 而且 Bj<=Ai+1` 这种情况了，那么这时就找到了中间位置了
+1. `Ai-1>Bj`，此时这四个值的大小顺序就是 `Bj-1<Bj<Ai-1<Ai`，i 的切割点要往左移
+2. `Bj-1>Ai`，此时这四个值的大小顺序就是 `Ai-1<Ai<Bj-1<Bj`，i 的切割点要往右移
+3. 除了上边两种情况之下，就剩下 `Ai-1<=Bj 而且 Bj-1<=Ai` 这种情况了，那么这时就找到了中间位置
 
 找到中间位置之后，还要根据总长度是奇数还是偶数来决定中位数的值：
 
-* 如果`(m+n)`是偶数，那中位数就是 `( max(Ai,Bj) + min(Ai+1,Bj+1) )/2`
-* 如果`(m+n)`是奇数，右边多一个数，所以中位数是右边的最小值，即 `min(Ai+1,Bj+1)`。
+* 如果`(m+n)`是偶数，那中位数就是 `( max(Ai-1,Bj-1) + min(Ai,Bj) )/2`
+* 如果`(m+n)`是奇数，右边多一个数，所以中位数是右边的最小值，即 `min(Ai,Bj)`。
 
-另外一个问题是 i 的左移和右移应该怎么移动，使用二分法，每次在取 A 剩下部分的中间值。最极端的情况是数组A的长度比较短，切割点为0或m。
+另外一个问题是 i 的左移和右移应该怎么移动，使用二分法，每次在取 A 剩下部分的中间值。
+最极端的情况是较短的数组切割点可能为0或m（假设数组A比较短，如果A全部比B小，A点割点为0，或全部比B大则切割点为m）
 
-以 A 和 B 中
+以 A 和 B 中长度短的来切割会更快找到中位数，时间复杂度为 O(log(min(m,n)))。
+
+```py
+class Solution:
+    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
+        A, B = nums1, nums2
+        m, n = len(A), len(B)
+        if m > n:
+            A, B = B, A
+            m, n = n, m
+        if n == 0:
+            raise ValueError
+
+        lo, hi = 0, m
+        while lo <= hi:
+            i = (lo+hi)//2
+            j = (m+n)//2 - i
+            if i > 0 and A[i-1] > B[j]:
+                hi = i-1
+            elif i < m and A[i] < B[j-1]:
+                lo = i+1
+            else:
+                if i == m:
+                    min_of_right = B[j]
+                elif j == n:
+                    min_of_right = A[i]
+                else:
+                    min_of_right = min(A[i], B[j])
+
+                if (m+n) & 1:
+                    return float(min_of_right)
+
+                if i == 0:
+                    max_of_left = B[j-1]
+                elif j == 0:
+                    max_of_left = A[i-1]
+                else:
+                    max_of_left = max(A[i-1], B[j-1])
+
+                return (max_of_left+min_of_right)/2
+```
