--- a/98. 验证二叉搜索树.md
+++ b/98. 验证二叉搜索树.md
@@ -1,37 +1,50 @@
-题目：[98. 验证二叉搜索树](https://leetcode-cn.com/problems/validate-binary-search-tree/)
+[98. 验证二叉搜索树](https://leetcode-cn.com/problems/validate-binary-search-tree/)
 
-### 解法一：中序遍历转换成数组，判断数组是否升序
+### 解法一：递归，逐级判断
 
-时间复杂度 O(2n)，转换成数组遍历一次，判断数组升序遍历一次。
-空间复杂度 O(n)
-
-### 解法二：中序遍历，记录前驱，判断前驱小于当前节点的值
+这是一种比较好理解和实现的解法。对于一个节点 node: 它的左子树取值区间应该在 `(-inf, node.val)`，右子树为 `(node.val, inf)`。
 
 ```py
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
-
 class Solution:
     def isValidBST(self, root: TreeNode) -> bool:
+        
+        def isValid(node, lower=float('-inf'), upper=float('inf')):
+            if not node:
+                return True
+            if lower < node.val < upper:
+                if isValid(node.left, lower, node.val) and isValid(node.right, node.val, upper):
+                    return True
+            return False
+        
+        return isValid(root)
+```
 
-        prev = float('-inf')
+* 时间复杂度：O(n)。如果是一树有效的二叉搜索树，需要遍历判断每个节点。
+* 空间复杂度：O(n)。栈存储的开销跟树的高度有关系，最坏情况下树是一条链，它的高度等于节点个数。
 
-        def is_valid(node):
+### 解法二：中序遍历，保存前序
+
+中序遍历就是：先左，再自己，最后右。
+
+二叉搜索树每个节点的前序都比当前值小。
+
+```py
+class Solution:
+
+    def isValidBST(self, root: TreeNode) -> bool:
+
+        def helper(node):
             nonlocal prev
             if not node:
                 return True
-            if is_valid(node.left):
+            if helper(node.left):
                 if prev < node.val:
                     prev = node.val
-                    return is_valid(node.right)
+                    return helper(node.right)
             return False
 
-        return is_valid(root)
+        prev = float('-inf')
+        return helper(root)
 ```
 
-* 时间复杂度 O(n)
-* 空间复杂度 O(h) 递归，栈的使用量跟树的深度相关
+时间
