--- a/98. 验证二叉搜索树.md
+++ b/98. 验证二叉搜索树.md
@@ -46,3 +46,6 @@ class Solution:
         prev = float('-inf')
         return helper(root)
 ```
+
+* 时间复杂度 O(n)
+* 空间复杂度 O(n)。栈存储的开销，最坏的情况一条链，要访问所有节点。
