--- a/707. 设计链表.md
+++ b/707. 设计链表.md
@@ -61,8 +61,6 @@ class MyLinkedList:
 如果使用双向链表，并且有头尾两个哨兵，那么：
 
 1. addAtTail 的时间复杂度将变为 O(1)
-2. 其他跟 Index
- 相
-关
-关的
-关的操作
+2. get, addAtIndex, deleteAtIndex 等操作可以先判断从前往后找、还是从后往前找更快
+
+
