--- a/707. 设计链表.md
+++ b/707. 设计链表.md
@@ -61,6 +61,108 @@ class MyLinkedList:
 如果使用双向链表，并且有头尾两个哨兵，那么：
 
 1. addAtTail 的时间复杂度将变为 O(1)
-2. get, addAtIndex, deleteAtIndex 等操作可以先判断从前往后找、还是从后往前找更快
+2. 记录链表长度，这样 get, addAtIndex, deleteAtIndex 等操作可以先判断从前往后找、还是从后往前找更快
+
+```py
+class ListNode:
+    def __init__(self, val):
+        self.val = val
+        self.next = None
+        self.prev = None
+
+
+class MyLinkedList:
+
+    def __init__(self):
+        """
+        Initialize your data structure here.
+        """
+        self.head = ListNode(0)
+        self.tail = ListNode(0)
+        self.head.next = self.tail
+        self.tail.prev = self.head
+        self.size = 0
+
+    def get(self, index: int) -> int:
+        """
+        Get the value of the index-th node in the linked list. If the index is invalid, return -1.
+        """
+        if index >= self.size:
+            return -1
+        if index+1 < self.size-index:
+            node = self.head
+            for _ in range(index+1):
+                node = node.next
+        else:
+            node = self.tail
+            for _ in range(self.size-index):
+                node = node.prev
+        return node.val
+
+    def addAtHead(self, val: int) -> None:
+        """
+        Add a node of value val before the first element of the linked list. After the insertion, the new node will be the first node of the linked list.
+        """
+        new_node = ListNode(val)
+        new_node.next = self.head.next
+        new_node.prev = self.head
+        self.head.next.prev = new_node
+        self.head.next = new_node
+        self.size += 1
+
+    def addAtTail(self, val: int) -> None:
+        """
+        Append a node of value val to the last element of the linked list.
+        """
+        new_node = ListNode(val)
+        new_node.next = self.tail
+        new_node.prev = self.tail.prev
+        self.tail.prev.next = new_node
+        self.tail.prev = new_node
+        self.size += 1
+
+    def addAtIndex(self, index: int, val: int) -> None:
+        """
+        Add a node of value val before the index-th node in the linked list. If index equals to the length of linked list, the node will be appended to the end of linked list. If index is greater than the length, the node will not be inserted.
+        """
+        if index > self.size:
+            return
+
+        if (index+1) < self.size-index:
+            node = self.head
+            for _ in range(index+1):
+                node = node.next
+        else:
+            node = self.tail
+            for _ in range(self.size-index):
+                node = node.prev
+
+        new_node = ListNode(val)
+        new_node.next = node
+        new_node.prev = node.prev
+        node.prev.next = new_node
+        node.prev = new_node
+        self.size += 1
+
+    def deleteAtIndex(self, index: int) -> None:
+        """
+        Delete the index-th node in the linked list, if the index is valid.
+        """
+        if index >= self.size:
+            return
+
+        if index+1 < self.size-index:
+            node = self.head
+            for _ in range(index+1):
+                node = node.next
+        else:
+            node = self.tail
+            for _ in range(self.size-index):
+                node = node.prev
+
+        node.prev.next = node.next
+        node.next.prev = node.prev
+        self.size -= 1
+```
 
 
