--- a/10. 正则表达式匹配.md
+++ b/10. 正则表达式匹配.md
@@ -20,7 +20,7 @@ class Solution:
         if p and s:
             return s[0] == p[0] and self.isMatch(s[1:], p[1:])
         else:
-            return True if not p and not s else False
+            return False if p or s else True
 ```
 
 当然也可以自底向上的用迭代解法：
@@ -48,7 +48,7 @@ class Solution:
         if p and s:
             return p[0] in {s[0], '.'} and self.isMatch(s[1:], p[1:])
         else:
-            return True if not p and not s else False
+            return False if p or s else True
 ```
 
 ### 考虑 '*' 的情况
@@ -60,4 +60,65 @@ class Solution:
 1. 假设 `a*` 匹配 0 个字符，那么需要把 'abbde' 和 'bbde' 比较
 2. `a*` 匹配掉了第一个 `a`，那么接下来仍需要 'bbde' 和 'a*bbde' 比较。因为下次 `a*` 还可以匹配 0 个字符。
 
+![](pics/10.png)
+
+```py
+class Solution:
+    def isMatch(self, s: str, p: str) -> bool:
+        if not p:
+            return not s
+        first_match = bool(s) and p[0] in {s[0], '.'}
+        if len(p) >= 2 and p[1] == '*':
+            return self.isMatch(s, p[2:]) or first_match and self.isMatch(s[1:], p)
+        else:
+            return first_match and self.isMatch(s[1:], p[1:])
+```
+
+### 备忘录
+
+备忘录是动态规划里「自顶向下」的解法，目的是记录之前的计算结果，避免重复计算。
+
+上边的解法里 `self.isMatch(s, p[2:])` 和 `self.isMatch(s[1:], p)` 可能会有重复的计算。
+
+令 dp[i,j] = self.isMatch(s[i:], p[j])
+
+```py
+
+class Solution:
+    def isMatch(self, s: str, p: str) -> bool:
+        memo = {}
+
+        def dp(i, j):
+            if (i, j) not in memo:
+                if j == len(p):
+                    ans = i == len(s)
+                else:
+                    first_match = i < len(s) and p[j] in {s[i], '.'}
+                    if j+1 < len(p) and p[j+1] == '*':
+                        ans = dp(i, j+2) or first_match and dp(i+1, j)
+                    else:
+                        ans = first_match and dp(i+1, j+1)
+                memo[i, j] = ans
+            return memo[i, j]
+        
+        return dp(0, 0)
+
+test_case = {
+    ("ab", ".*c") : False,
+    ("aa", "a*") : True,
+    ("ab", ".*") : True,
+    ("aab", "c*a*b") : True,
+    ("mississippi", "mis*is*p*.") : False,
+}
+solution = Solution()
+
+for args, res in test_case.items():
+    s, p = args
+    r = solution.isMatch(s, p)
+    if r != res:
+        print(f'Fail,', args, res, r)
+        break
+    else:
+        print(f'SUCCESS, {args}')
+```
 
