--- a/18. 四数之和.md
+++ b/18. 四数之和.md
@@ -1,7 +1,8 @@
 [18. 四数之和](https://leetcode-cn.com/problems/4sum/)
 
 三数之和是先定一个点，然后头尾指针
-四数之行是先定一个点，再定一个点，再头尾指针。
+
+四数之和是先定一个点，再定一个点，再头尾指针。
 
 这题就是去重有点麻烦。
 
@@ -40,5 +41,4 @@ class Solution:
 solution = Solution()
 res = solution.fourSum([-1, 0, -5, -2, -2, -4, 0, 1, -2], -9)
 print(res)
-
 ```
