--- a/138. 复制带随机指针的链表.md
+++ b/138. 复制带随机指针的链表.md
@@ -90,35 +90,27 @@ class Solution:
 
 加了一个哨兵节点 dummy 的好处是不用单独处理 head 了，流程处理起来更顺畅一点。
 
+* 时间复杂度 O(n)
+* 空间复杂度 O(n)
+
 ```py
-"""
-# Definition for a Node.
-class Node:
-    def __init__(self, x: int, next: 'Node' = None, random: 'Node' = None):
-        self.val = int(x)
-        self.next = next
-        self.random = random
-"""
 class Solution:
     def __init__(self):
-        self.visited = {}
+        self.copied = {}
 
-    def getClonedNode(self, node):
-        if node:
-            if node in self.visited:
-                return self.visited[node]
-            else:
-                self.visited[node] = Node(node.val)
-                return self.visited[node]
+    def getNode(self, x):
+        if x:
+            if x not in self.copied:
+                self.copied[x] = ListNode(x.val)
+            return self.copied[x]
 
     def copyRandomList(self, head: 'Node') -> 'Node':
-        dummy = Node(0)
-        x = dummy
+        cp = hh = ListNode(0)
         while head:
-            x.next = self.getClonedNode(head)
-            x.next.random = self.getClonedNode(head.random)
-            head, x = head.next, x.next
-        return dummy.next
+            cp.next = self.getNode(head)
+            cp.next.random = self.getNode(head.random)
+            cp, head = cp.next, head.next
+        return hh.next
 ```
 
 ### 解法四：
