--- a/215. 数组中的第K个最大元素.md
+++ b/215. 数组中的第K个最大元素.md
@@ -1,8 +1,8 @@
 [215. 数组中的第K个最大元素](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/)
 
-面试中遇到了这题，没做出来。想着是快排来着，没想到可以丢掉一边（类似于二分法了）。
+面试中遇到了这题，没做出来。想着是快排来着，没想到可以丢掉一边（类似于二分法了）。这题我应该会终身难忘了。
 
-```
+```py
 class Solution:
     def findKthLargest(self, nums: List[int], k: int) -> int:
 
