--- a/189. 旋转数组.md
+++ b/189. 旋转数组.md
@@ -1,5 +1,7 @@
 [189. 旋转数组](https://leetcode-cn.com/problems/rotate-array/)
 
+## 解法一
+
 ```py
 class Solution:
     def rotate(self, nums: List[int], k: int) -> None:
@@ -10,7 +12,9 @@ class Solution:
         nums[:] = nums[-k:] + nums[:-k]
 ```
 
-上面这个解有问题，因为空间复杂度不是 O(1)。
+这个解有问题，因为空间复杂度不是 O(1)。
+
+## 解法二
 
 更妙的方法是把整个数组反过来，再分别把 [:k] 和 [k:] 反过来
 
@@ -30,4 +34,27 @@ class Solution:
         nums[:] = nums[::-1]
         self.reverse(nums, 0, k-1)
         self.reverse(nums, k, len(nums)-1)
+```
+
+## 解法三
+
+```py
+
+class Solution:
+    def rotate(self, nums: List[int], k: int) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        i = count = 0
+        while count < len(nums):
+            cur, prev = i, nums[i]
+            while True:
+                nxt = (cur + k) % len(nums)
+                nums[nxt], prev = prev, nums[nxt]
+                cur = nxt
+                count += 1
+                print(count, l, prev)
+                if cur == i:
+                    break
+            i += 1
 ```
