--- a/350. 两个数组的交集 II.md
+++ b/350. 两个数组的交集 II.md
@@ -1,6 +1,63 @@
 [350. 两个数组的交集 II](https://leetcode-cn.com/problems/intersection-of-two-arrays-ii/)
 
-### 解法一：哈希映射
+## 解法一，先排序，后查找
+
+```py
+class Solution:
+    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1.sort()
+        nums2.sort()
+        i = j = 0
+        ans = []
+        while i < len(nums1) and j < len(nums2):
+            if nums1[i] < nums2[j]:
+                i += 1
+            elif nums1[i] > nums2[j]:
+                j += 1
+            else:
+                ans.append(nums1[i])
+                i += 1
+                j += 1
+        return ans
+```
+
+## 解法二：排序 + 二分法
+
+对《解法一》中查找部分的优化。实际上意义貌似不是很大。
+
+1. 对两个数组排序
+2. 从其中一个数组 A 中取值，到另一个数组 B 中用二分法找位置。并且记录当前找到的左边位置 pos
+3. 下次再找的时候，从 pos+1 开始找
+
+```py
+import bisect
+
+class Solution:
+    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1.sort()
+        nums2.sort()
+        start = 0
+        ans = []
+        for x in nums1:
+            pos = bisect.bisect_left(nums2, x, start)
+            if pos == len(nums2):
+                break
+            elif x == nums2[pos]:
+                ans.append(x)
+                start = pos+1
+        return ans
+```
+
+bisect 是 python 中二分法查找的库。bisect.bisect_left(nums, x) 返回 x 在 nums 中适合插入的最左边位置。
+
+比如 `nums = [ 1, 3, 3, 3, 5 ]`
+
+`bisect.bisect_left(nums, 3)` 就返回 1，插入成为最左边的 3
+
+`bisect.bisect_right(nums, 3)` 就返回 4，插入成为最右边的 3
+
+
+## 解法三，哈希表
 
 1. 把一个数组中的值和它出现的次出记录到哈希映射里
 2. 逐一取另一个数组中的值，到哈希表里去找，找到了就 append 进结果，并且相应哈希映射值减 1
@@ -37,37 +94,3 @@ class Solution:
                 visited[x] -= 1
         return ans
 ```
-
-
-### 解法二：排序+二分法
-
-1. 对两个数组排序
-2. 从其中一个数组 A 中取值，到另一个数组 B 中用二分法找位置。并且记录当前找到的左边位置 pos
-3. 下次再找的时候，从 pos+1 开始找
-
-```py
-import bisect
-
-class Solution:
-    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
-        nums1.sort()
-        nums2.sort()
-        start = 0
-        ans = []
-        for x in nums1:
-            pos = bisect.bisect_left(nums2, x, start)
-            if pos == len(nums2):
-                break
-            elif x == nums2[pos]:
-                ans.append(x)
-                start = pos+1
-        return ans
-```
-
-bisect 是 python 中二分法查找的库。bisect.bisect_left(nums, x) 返回 x 在 nums 中适合插入的最左边位置。
-
-比如 `nums = [ 1, 3, 3, 3, 5 ]`
-
-`bisect.bisect_left(nums, 3)` 就返回 1，插入成为最左边的 3
-
-`bisect.bisect_right(nums, 3)` 就返回 4，插入成为最右边的 3
