--- a/00036. 有效的数独.md
+++ b/00036. 有效的数独.md
@@ -33,4 +33,24 @@ class Solution:
         return True
 ```
 
-缺点是扫描了三次。可以用空间换时间，总共有 9+9+9 个扫描区，每取一个元素，就到它应该在的扫描区里检查是否存在，这样只需
+缺点是扫描了三次。可以用空间换时间，总共有 9+9+9 个扫描区，每取一个元素，就到它应该在的扫描区里检查是否存在，这样只需扫一次。
+
+```py
+class Solution:
+    def isValidSudoku(self, board: List[List[str]]) -> bool:
+        row = [set() for _ in range(9)]
+        col = [set() for _ in range(9)]
+        blk = [set() for _ in range(9)]
+
+        for j in range(9):
+            for i in range(9):
+                blk_id = (j//3)*3 + (i//3)
+                x = board[j][i]
+                if x != '.':
+                    if x in row[j] or x in col[i] or x in blk[blk_id]:
+                        return False
+                    row[j].add(x)
+                    col[i].add(x)
+                    blk[blk_id].add(x)
+        return True
+```
