--- a/00036. 有效的数独.md
+++ b/00036. 有效的数独.md
@@ -38,19 +38,19 @@ class Solution:
 ```py
 class Solution:
     def isValidSudoku(self, board: List[List[str]]) -> bool:
-        row = [set() for _ in range(9)]
-        col = [set() for _ in range(9)]
-        blk = [set() for _ in range(9)]
+        rows = [set() for _ in range(9)]
+        cols = [set() for _ in range(9)]
+        blks = [[set() for _ in range(3)] for _ in range(3)]
 
-        for j in range(9):
-            for i in range(9):
-                blk_id = (j//3)*3 + (i//3)
-                x = board[j][i]
-                if x != '.':
-                    if x in row[j] or x in col[i] or x in blk[blk_id]:
-                        return False
-                    row[j].add(x)
-                    col[i].add(x)
-                    blk[blk_id].add(x)
+        for i in range(9):
+            for j in range(9):
+                x = board[i][j]
+                if x == '.':
+                    continue
+                if x in rows[i] or x in cols[j] or x in blks[i//3][j//3]:
+                    return False
+                rows[i].add(x)
+                cols[j].add(x)
+                blks[i//3][j//3].add(x)
         return True
 ```
