--- a/00026. 删除排序数组中的重复项.md
+++ b/00026. 删除排序数组中的重复项.md
@@ -1,5 +1,6 @@
 [26. 删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
 
+## 1
 
 ```py
 class Solution:
@@ -13,7 +14,9 @@ class Solution:
         return pos+1
 ```
 
-下面是我二刷的解，不如以前的解写的好。
+## 2
+
+二刷的解，不如以前的解写的好。
 
 ```py
 class Solution:
@@ -27,4 +30,22 @@ class Solution:
             j += 1
         return i+1
 
+```
+
+## 3
+
+发现之前有解有个bug，如果输入是个空数组 []，仍然会返回 1。虽然能测试通过，但显然这是不对的。
+增加一行检查。
+
+```py
+class Solution:
+    def removeDuplicates(self, nums: List[int]) -> int:
+        if not nums: return 0
+        pos = 0
+        for i, x in enumerate(nums):
+            if x != nums[pos]:
+                pos += 1
+                if i != pos:
+                    nums[pos] = x
+        return pos+1
 ```
