--- a/00189. 旋转数组.md
+++ b/00189. 旋转数组.md
@@ -1,20 +1,6 @@
 [189. 旋转数组](https://leetcode-cn.com/problems/rotate-array/)
 
-## 解法一
-
-```py
-class Solution:
-    def rotate(self, nums: List[int], k: int) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
-        k %= len(nums)
-        nums[:] = nums[-k:] + nums[:-k]
-```
-
-这个解有问题，因为空间复杂度不是 O(1)。
-
-## 解法二
+## 1
 
 更妙的方法是把整个数组反过来，再分别把 [:k] 和 [k:] 反过来
 
@@ -22,21 +8,18 @@ class Solution:
 class Solution:
     def reverse(self, nums, i, j):
         while i < j:
-            nums[i], nums[j] = nums[j], nums[i]
+            nums[i],nums[j] = nums[j],nums[i]
             i += 1
             j -= 1
-        
+
     def rotate(self, nums: List[int], k: int) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
         k %= len(nums)
-        nums[:] = nums[::-1]
+        self.reverse(nums, 0, len(nums)-1)
         self.reverse(nums, 0, k-1)
         self.reverse(nums, k, len(nums)-1)
 ```
 
-## 解法三
+## 2
 
 ```py
 
