Update 00350. 两个数组的交集 II.md

--- a/00350. 两个数组的交集 II.md
+++ b/00350. 两个数组的交集 II.md
@@ -25,6 +25,8 @@ class Solution:
 
 ## 2
 
+哈希表
+
 ```py
 class Solution:
     def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
