--- a/00001. 两数之和.md
+++ b/00001. 两数之和.md
@@ -1,8 +1,8 @@
 [1. 两数之和](https://leetcode-cn.com/problems/two-sum/)
 
-## 解法一
+## 1
 
-取一个数，在数组里找他的另一半。
+取一个数，在数组后面的元素里找他的另一半。
 
 ```py
 class Solution:
@@ -14,6 +14,9 @@ class Solution:
                     return [i, j]
         return []
 ```
+
+时间复杂度：O(n^2)
+空间复杂度：O(1)
 
 ## 解法二，哈希表
 
@@ -29,3 +32,7 @@ class Solution:
                 return [d[y], i]
             d[x] = i
 ```
+
+
+时间复杂度：O(n)
+空间复杂度：O(n)
