--- a/00001. 两数之和.md
+++ b/00001. 两数之和.md
@@ -15,8 +15,16 @@ class Solution:
         return []
 ```
 
-时间复杂度：O(n^2)
-空间复杂度：O(1)
+在最坏的情况下：
+
+1. 第 1 个元素，要比较 n-1 次
+2. 第 2 个元素，要比较 n-2 次
+...
+
+n-1 + n-2 + ... + 1 = n(n-1)/2
+
+* 时间复杂度：O(n^2)
+* 空间复杂度：O(1)
 
 ## 解法二，哈希表
 
@@ -34,5 +42,5 @@ class Solution:
 ```
 
 
-时间复杂度：O(n)
-空间复杂度：O(n)
+* 时间复杂度：O(n)
+* 空间复杂度：O(n)
