--- a/00036. 有效的数独.md
+++ b/00036. 有效的数独.md
@@ -1,6 +1,8 @@
 [36. 有效的数独](https://leetcode-cn.com/problems/valid-sudoku/)
 
-## 解法一，逐行、逐列、逐块扫描
+## 1
+
+逐行、逐列、逐块扫描
 
 ```py
 class Solution:
@@ -33,7 +35,11 @@ class Solution:
         return True
 ```
 
-缺点是扫描了三次。可以用空间换时间，总共有 9+9+9 个扫描区，每取一个元素，就到它应该在的扫描区里检查是否存在，这样只需扫一次。
+缺点是扫描了三次。
+
+## 2
+
+用空间换时间，总共有 9+9+9 个扫描区，每取一个元素，就到它应该在的扫描区里检查是否存在，这样只需扫一次。
 
 ```py
 class Solution:
