--- a/00038. 外观数列.md
+++ b/00038. 外观数列.md
@@ -48,3 +48,29 @@ class Solution:
 ```
 
 
+## 3
+
+抽出一个子函数，使得程序更容易理解
+
+```py
+class Solution:
+    def countAndSay(self, n: int) -> str:
+
+        def say(s):
+            repeat = s[0]
+            times = 1
+            ans = ""
+            for x in s[1:]+" ":
+                if x == repeat:
+                    times += 1
+                else:
+                    ans += str(times) + repeat
+                    times = 1
+                    repeat = x
+            return ans
+        
+        s = "1"
+        for _ in range(n-1):
+            s = say(s)
+        return s
+```
