--- a/00019. 删除链表的倒数第N个节点.md
+++ b/00019. 删除链表的倒数第N个节点.md
@@ -5,7 +5,7 @@
 ```py
 class Solution:
     def removeNthFromEnd(self, head: ListNode, n: int) -> ListNode:
-        sentinel = ListNode(0)
+        sentinel = ListNode()
         sentinel.next = head
         fast = slow = sentinel
         for _ in range(n):
