--- a/00206. 反转链表.md
+++ b/00206. 反转链表.md
@@ -15,10 +15,26 @@
 著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
 ```
 
-### 递归
+## 1 迭代
+
+```py
+class Solution:
+    def reverseList(self, head: ListNode) -> ListNode:
+        prev, cur = None, head
+        while cur:
+            nxt = cur.next
+            cur.next = prev
+            prev = cur
+            cur = nxt
+        return prev
+```
+
+* 时间复杂度 O(n)。n 为链表上的结点个数
+* 空间得杂度 O(1)
+
+## 2 递归
 
 递归的解法理解起来反倒是比较绕
-
 
 ```
     head           tail
@@ -31,12 +47,6 @@
 `head.next = Non3` 是为了在 head 指到最头部的时候把它的 next 指向 None 。
 
 ```py
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-
 class Solution:
     def reverseList(self, head: ListNode) -> ListNode:
         if not head or not head.next:
@@ -48,22 +58,3 @@ class Solution:
 ```
 
 
-### 迭代
-
-```py
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-
-class Solution:
-    def reverseList(self, head: ListNode) -> ListNode:
-        prev, cur = None, head
-        while cur:
-            cur.next, prev, cur = prev, cur, cur.next
-        return prev
-```
-
-* 时间复杂度 O(n)。n 为链表上的结点个数
-* 空间得杂度 O(1)
