--- a/00206. 反转链表.md
+++ b/00206. 反转链表.md
@@ -44,7 +44,8 @@ class Solution:
 ```
 
 每次递归把上一次的 head 保存在了栈里边。递归回溯的时候又取出来。
-`head.next = Non3` 是为了在 head 指到最头部的时候把它的 next 指向 None 。
+
+`head.next = None` 是为了在 head 指到最头部的时候把它的 next 指向 None 。
 
 ```py
 class Solution:
