--- a/00206. 反转链表.md
+++ b/00206. 反转链表.md
@@ -50,12 +50,13 @@ class Solution:
 ```py
 class Solution:
     def reverseList(self, head: ListNode) -> ListNode:
-        if not head or not head.next:
+        if head and head.next:
+            tail = self.reverseList(head.next)
+            head.next.next = head
+            head.next = None
+            return tail
+        else:
             return head
-        tail = self.reverseList(head.next)
-        head.next.next = head
-        head.next = None
-        return tail
 ```
 
 
