--- a/00141. 环形链表.md
+++ b/00141. 环形链表.md
@@ -2,13 +2,12 @@
 
 快慢指针。如果是首尾相连形成的最大环，则需要花费 n 步才能追上。
 
-时间复杂度 O(n)；空间复杂度 O(1)。
+* 时间复杂度 O(n)
+* 空间复杂度 O(1)。
 
 ```py
 class Solution:
     def hasCycle(self, head: ListNode) -> bool:
-        if not head or not head.next:
-            return False
         fast = slow = head
         while fast and fast.next:
             fast = fast.next.next
