--- a/00083. 删除排序链表中的重复元素.md
+++ b/00083. 删除排序链表中的重复元素.md
@@ -22,9 +22,10 @@
 class Solution:
     def deleteDuplicates(self, head: ListNode) -> ListNode:
         p = head
-        while p:
-            while p.next and p.next.val == p.val:
+        while p and p.next:
+            if p.val == p.next.val:
                 p.next = p.next.next
-            p = p.next
+            else:
+                p = p.next
         return head
 ```
