--- a/00098. 验证二叉搜索树.md
+++ b/00098. 验证二叉搜索树.md
@@ -1,6 +1,8 @@
 [98. 验证二叉搜索树](https://leetcode-cn.com/problems/validate-binary-search-tree/)
 
-### 解法一：递归，逐级判断
+## 1
+
+递归，逐级判断
 
 这是一种比较好理解和实现的解法。对于一个节点 node: 它的左子树取值区间应该在 `(-inf, node.val)`，右子树为 `(node.val, inf)`。
 
@@ -22,7 +24,9 @@ class Solution:
 * 时间复杂度：O(n)。如果是一树有效的二叉搜索树，需要遍历判断每个节点。
 * 空间复杂度：O(n)。栈存储的开销跟树的高度有关系，最坏情况下树是一条链，它的高度等于节点个数。
 
-### 解法二：中序遍历，保存前序
+## 2
+
+中序遍历，保存前序
 
 中序遍历就是：先左，再自己，最后右。
 
@@ -30,21 +34,18 @@ class Solution:
 
 ```py
 class Solution:
-
     def isValidBST(self, root: TreeNode) -> bool:
 
-        def helper(node):
+        def isValid(node):
             nonlocal prev
-            if not node:
-                return True
-            if helper(node.left):
-                if prev < node.val:
-                    prev = node.val
-                    return helper(node.right)
+            if not node: return True
+            if isValid(node.left) and prev < node.val:
+                prev = node.val
+                return isValid(node.right)
             return False
-
+        
         prev = float('-inf')
-        return helper(root)
+        return isValid(root)
 ```
 
 * 时间复杂度 O(n)
