--- a/00101. 对称二叉树.md
+++ b/00101. 对称二叉树.md
@@ -5,25 +5,18 @@
 ### 递归
 
 ```py
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
-
 class Solution:
     def isSymmetric(self, root: TreeNode) -> bool:
-        
-        def compare(a, b):
+
+        def equal(a, b):
             if not a and not b:
                 return True
             elif a and b and a.val == b.val:
-                return compare(a.left, b.right) and compare(a.right, b.left)
+                return equal(a.left, b.right) and equal(a.right, b.left)
             else:
                 return False
         
-        return compare(root.left, root.right) if root else True
+        return equal(root.left, root.right) if root else True
 ```
 
 时间复杂度：O(n)
