--- a/00101. 对称二叉树.md
+++ b/00101. 对称二叉树.md
@@ -9,14 +9,11 @@ class Solution:
     def isSymmetric(self, root: TreeNode) -> bool:
 
         def equal(a, b):
-            if not a and not b:
-                return True
-            elif a and b and a.val == b.val:
-                return equal(a.left, b.right) and equal(a.right, b.left)
-            else:
-                return False
+            if not a and not b: return True
+            if not a or not b: return False
+            return a.val == b.val and equal(a.left, b.right) and equal(a.right, b.left)
         
-        return equal(root.left, root.right) if root else True
+        return equal(root, root)
 ```
 
 时间复杂度：O(n)
@@ -27,30 +24,17 @@ class Solution:
 深度优先搜索
 
 ```py
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
-
 class Solution:
     def isSymmetric(self, root: TreeNode) -> bool:
-        
-        if not root: return True
-
-        from queue import SimpleQueue
-        q = SimpleQueue()
-        q.put((root.left, root.right))
-
-        while not q.empty():
-            l, r = q.get()
-            if not l and not r:
+        q = [(root, root)]
+        while q:
+            a, b = q.pop()
+            if not a and not b:
                 continue
-            elif l and r and l.val == r.val:
-                q.put((l.right, r.left))
-                q.put((l.left, r.right))
-            else:
+            elif a and b and a.val == b.val:
+                q.append((a.left, b.right))
+                q.append((a.right, b.left))
+            else :
                 return False
         return True
 ```
